--- a/Anime Recommendation System.ipynb
+++ b/Anime Recommendation System.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 155,
    "metadata": {
     "_cell_guid": "7eb17329-b0b8-4f4e-9d65-0e1ae405fc8f",
     "_uuid": "81751117b205ae03fac78ce31e45e6b9f35f312c",
@@ -40,7 +40,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "from PIL import Image\n",
     "from wordcloud import WordCloud\n",
     "from sklearn.preprocessing import MaxAbsScaler\n",
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 158,
    "metadata": {
     "scrolled": false
    },
@@ -304,17 +303,18 @@
     {
      "data": {
       "text/plain": [
-       "id                0\n",
-       "title_romaji      0\n",
-       "genres            0\n",
-       "format           54\n",
-       "episodes        631\n",
-       "mean_score      684\n",
-       "popularity        0\n",
+       "id                  0\n",
+       "title_english    8905\n",
+       "title_romaji        0\n",
+       "genres              0\n",
+       "format              0\n",
+       "episodes            0\n",
+       "mean_score          0\n",
+       "popularity          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,7 +1552,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_distance(series, rec):\n",
+    "    return np.linalg.norm(X[series] - X[rec])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1567,25 +1577,28 @@
     "    out = []\n",
     "    \n",
     "    for i in anime_indices[index][1:]:\n",
+    "        dist = get_distance(index, i)\n",
     "        ser = [ anime.iloc[i]['id'], \n",
     "                anime.iloc[i]['title_romaji'], \n",
     "                anime.iloc[i]['genres'], \n",
     "                anime.iloc[i]['episodes'], \n",
-    "                anime.iloc[i]['mean_score']]\n",
+    "                anime.iloc[i]['mean_score'],\n",
+    "                dist\n",
+    "              ]\n",
     "        out.append(ser)\n",
-    "    return pd.DataFrame(out, columns=[\"id\", \"title_romaji\", \"genres\", \"episodes\", \"mean_score\"])"
+    "    return pd.DataFrame(out, columns=[\"id\", \"title_romaji\", \"genres\", \"episodes\", \"mean_score\", \"distance\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendations for Naruto :\n"
+      "Recommendations for Steins;Gate :\n"
      ]
     },
     {
@@ -1614,126 +1627,137 @@
        "      <th>genres</th>\n",
        "      <th>episodes</th>\n",
        "      <th>mean_score</th>\n",
+       "      <th>distance</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1735</td>\n",
-       "      <td>NARUTO: Shippuuden</td>\n",
-       "      <td>Action,Adventure,Comedy,Drama,Fantasy,Supernat...</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>81.0</td>\n",
+       "      <td>21127</td>\n",
+       "      <td>Steins;Gate 0</td>\n",
+       "      <td>Drama,Psychological,Sci-Fi,Thriller</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>0.369745</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>21</td>\n",
-       "      <td>ONE PIECE</td>\n",
-       "      <td>Action,Adventure,Comedy,Drama,Fantasy</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>87.0</td>\n",
+       "      <td>110350</td>\n",
+       "      <td>ID: INVADED</td>\n",
+       "      <td>Drama,Mystery,Psychological,Sci-Fi,Thriller</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1.109550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>101922</td>\n",
-       "      <td>Kimetsu no Yaiba</td>\n",
-       "      <td>Action,Adventure,Drama,Fantasy,Supernatural</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>84.0</td>\n",
+       "      <td>7193</td>\n",
+       "      <td>Aoi Bungaku Series</td>\n",
+       "      <td>Drama,Psychological,Thriller</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>1.142953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>142329</td>\n",
-       "      <td>Kimetsu no Yaiba: Yuukaku-hen</td>\n",
-       "      <td>Action,Adventure,Drama,Fantasy,Supernatural</td>\n",
+       "      <td>21190</td>\n",
+       "      <td>Subete ga F ni Naru: THE PERFECT INSIDER</td>\n",
+       "      <td>Drama,Mystery,Psychological,Sci-Fi,Thriller</td>\n",
        "      <td>11.0</td>\n",
-       "      <td>88.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1.154837</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>813</td>\n",
-       "      <td>Dragon Ball Z</td>\n",
-       "      <td>Action,Adventure,Comedy,Fantasy,Supernatural</td>\n",
-       "      <td>291.0</td>\n",
-       "      <td>79.0</td>\n",
+       "      <td>20615</td>\n",
+       "      <td>selector infected WIXOSS</td>\n",
+       "      <td>Drama,Psychological,Thriller</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>1.155104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>223</td>\n",
-       "      <td>Dragon Ball</td>\n",
-       "      <td>Action,Adventure,Comedy,Fantasy,Supernatural</td>\n",
-       "      <td>153.0</td>\n",
-       "      <td>77.0</td>\n",
+       "      <td>20714</td>\n",
+       "      <td>selector spread WIXOSS</td>\n",
+       "      <td>Drama,Psychological,Thriller</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>1.161306</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>21499</td>\n",
-       "      <td>Sousei no Onmyouji</td>\n",
-       "      <td>Action,Adventure,Comedy,Drama,Fantasy,Romance,...</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>69.0</td>\n",
+       "      <td>100251</td>\n",
+       "      <td>Dorei-ku The Animation</td>\n",
+       "      <td>Drama,Psychological,Thriller</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>1.202814</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>154</td>\n",
-       "      <td>Shaman King</td>\n",
-       "      <td>Action,Adventure,Comedy,Drama,Supernatural</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>74.0</td>\n",
+       "      <td>124131</td>\n",
+       "      <td>Gekidol</td>\n",
+       "      <td>Drama,Psychological,Sci-Fi</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>1.216787</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>21038</td>\n",
-       "      <td>Ushio to Tora (TV)</td>\n",
-       "      <td>Action,Adventure,Comedy,Drama,Supernatural</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>73.0</td>\n",
+       "      <td>13601</td>\n",
+       "      <td>PSYCHO-PASS</td>\n",
+       "      <td>Action,Psychological,Sci-Fi,Thriller</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>1.433254</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>145139</td>\n",
-       "      <td>Kimetsu no Yaiba: Katanakaji no Sato-hen</td>\n",
-       "      <td>Action,Adventure,Drama,Fantasy,Supernatural</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>59.0</td>\n",
+       "      <td>98659</td>\n",
+       "      <td>Youkoso Jitsuryoku Shijou Shugi no Kyoushitsu e</td>\n",
+       "      <td>Drama,Psychological</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1.437998</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       id                              title_romaji  \\\n",
-       "0    1735                        NARUTO: Shippuuden   \n",
-       "1      21                                 ONE PIECE   \n",
-       "2  101922                          Kimetsu no Yaiba   \n",
-       "3  142329             Kimetsu no Yaiba: Yuukaku-hen   \n",
-       "4     813                             Dragon Ball Z   \n",
-       "5     223                               Dragon Ball   \n",
-       "6   21499                        Sousei no Onmyouji   \n",
-       "7     154                               Shaman King   \n",
-       "8   21038                        Ushio to Tora (TV)   \n",
-       "9  145139  Kimetsu no Yaiba: Katanakaji no Sato-hen   \n",
+       "       id                                     title_romaji  \\\n",
+       "0   21127                                    Steins;Gate 0   \n",
+       "1  110350                                      ID: INVADED   \n",
+       "2    7193                               Aoi Bungaku Series   \n",
+       "3   21190         Subete ga F ni Naru: THE PERFECT INSIDER   \n",
+       "4   20615                         selector infected WIXOSS   \n",
+       "5   20714                           selector spread WIXOSS   \n",
+       "6  100251                           Dorei-ku The Animation   \n",
+       "7  124131                                          Gekidol   \n",
+       "8   13601                                      PSYCHO-PASS   \n",
+       "9   98659  Youkoso Jitsuryoku Shijou Shugi no Kyoushitsu e   \n",
        "\n",
-       "                                              genres  episodes  mean_score  \n",
-       "0  Action,Adventure,Comedy,Drama,Fantasy,Supernat...     500.0        81.0  \n",
-       "1              Action,Adventure,Comedy,Drama,Fantasy       2.0        87.0  \n",
-       "2        Action,Adventure,Drama,Fantasy,Supernatural      26.0        84.0  \n",
-       "3        Action,Adventure,Drama,Fantasy,Supernatural      11.0        88.0  \n",
-       "4       Action,Adventure,Comedy,Fantasy,Supernatural     291.0        79.0  \n",
-       "5       Action,Adventure,Comedy,Fantasy,Supernatural     153.0        77.0  \n",
-       "6  Action,Adventure,Comedy,Drama,Fantasy,Romance,...      50.0        69.0  \n",
-       "7         Action,Adventure,Comedy,Drama,Supernatural      64.0        74.0  \n",
-       "8         Action,Adventure,Comedy,Drama,Supernatural      26.0        73.0  \n",
-       "9        Action,Adventure,Drama,Fantasy,Supernatural       2.0        59.0  "
+       "                                        genres  episodes  mean_score  distance  \n",
+       "0          Drama,Psychological,Sci-Fi,Thriller      23.0        83.0  0.369745  \n",
+       "1  Drama,Mystery,Psychological,Sci-Fi,Thriller      13.0        77.0  1.109550  \n",
+       "2                 Drama,Psychological,Thriller      12.0        74.0  1.142953  \n",
+       "3  Drama,Mystery,Psychological,Sci-Fi,Thriller      11.0        68.0  1.154837  \n",
+       "4                 Drama,Psychological,Thriller      12.0        69.0  1.155104  \n",
+       "5                 Drama,Psychological,Thriller      12.0        71.0  1.161306  \n",
+       "6                 Drama,Psychological,Thriller      12.0        54.0  1.202814  \n",
+       "7                   Drama,Psychological,Sci-Fi      12.0        51.0  1.216787  \n",
+       "8         Action,Psychological,Sci-Fi,Thriller      22.0        82.0  1.433254  \n",
+       "9                          Drama,Psychological      12.0        77.0  1.437998  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_recommendations('Naruto')"
+    "get_recommendations('Steins;Gate')"
    ]
   },
   {
